# mast3rnvs

scannet_workdir/: pyproject.toml
scannet_workdir/dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scannet_workdir/instantngp_scannetpp/: eval.sh  eval_undist.sh  instantngp_scannetpp_config.py  run.sh  run_undist.sh
scannet_workdir/splatfacto_scannetpp/: eval.sh  run.sh  splatfacto_scannetpp_config.py
